--- a/index.Rmd
+++ b/index.Rmd
@@ -16,7 +16,7 @@ twitter:
   creator: "@YEmreTapan"
   site: "@YEmreTapan"
 output:
-  postcards::jolla
+  postcards::trestles
 ---
 
 
@@ -46,9 +46,9 @@ d-title, d-byline {
 ```
 
 
+I am a PhD Student in Political Science at Northeastern University. I earned my B.A. in Economics from Bogazici University and my M.Sc. in Middle East Studies from METU. My research sits at the intersection of data science and social sciences. I specialize in social network analysis and computational text analysis to study online polarization, online extremism and non-state actors with a particular focus on how they radicalize.
 
-Hi! I am a PhD student in Political Science at Northeastern University. I am using computational text analysis and network analysis methods to study online extremism and polarization.
-
+I am a graduate of SICSS-Helsinki in 2018 and ICPSR Summer Program in 2020 as one of the recipients of the Scholarship for Political Science Research. I am co-organizer of Summer Institute in Computational Social Science in Istanbul. I am also the lead of Istanbul Twitter Develeoper Community.
   
 
 
