--- a/_posts/2021-09-01-buildingdistill/buildingdistill.Rmd
+++ b/_posts/2021-09-01-buildingdistill/buildingdistill.Rmd
@@ -4,10 +4,10 @@ description: |
   How I build this site using {distill}
 author:
   - name: Yunus Emre Tapan
-    affliation: Northeastern University
-date: 09-01-2021
+    affiliation: Northeastern University
 categories:
   - computational social science
+date: 09-01-2021
 preview: featured.jpg
 output:
   distill::distill_article:
