--- a/index.Rmd
+++ b/index.Rmd
@@ -84,10 +84,24 @@ I am a graduate of SICSS-Helsinki in 2018 and ICPSR Summer Program in 2020 as on
 
 ::::
 
+## Teaching Experience
+
+Computational Thinking, Fall 2020 An Undergraduate Course at Kadir Has University
+
+Summer Institute in Computational Social Science (SICSS), Istanbul Partner event of the SICSS at Princeton University, June 17-30 2019
+
+Summer Institute in Computational Social Science (SICSS), Istanbul Partner virtual event of the SICSS at Duke University, May 31- June 27 2020
 
 ## Method Schools
 
-organization: Oxford Spring School in Advanced Research Methods organization_url: ‘https://www.politics.ox.ac.uk/spring-school/oxford-spring-school-in-advanced-research-methods.html' title: Machine Learning url: ‘https://www.politics.ox.ac.uk/spring-school/course-outline.html?schoolid=517' certificate_url: '’ date_start: ‘2021-04-19’ date_end: ‘2021-04-23’ description: ‘Computational techniques broadly referred to as “machine learning” (ML) are attracting increasing attention in the social sciences. This course will introduce students to the fundamental theories and concepts used across ML techniques (e.g maximum likelihood estimation, classification, overfitting, and cross-validation), and how to apply various popular ML techniques (e.g. LASSO, random forests, bayesian additive regression trees, and neural networks). This course will also pay particular attention to inferential problems regarding how best to use ML methods in social science contexts and discuss practical issues (e.g. computational power and parallelisation). Students on this course are required to be familiar with probability and statistics (OLS, hypothesis testing, logistic regression) and to have basic knowledge of the R programming language.’
+### [Oxford Spring School in Advanced Research Methods](https://www.politics.ox.ac.uk/spring-school/oxford-spring-school-in-advanced-research-methods.html)
+
+Machine Learning 
+
+date_start: ‘2021-04-19’ date_end: ‘2021-04-23’ 
+
+description: 
+‘Computational techniques broadly referred to as “machine learning” (ML) are attracting increasing attention in the social sciences. This course will introduce students to the fundamental theories and concepts used across ML techniques (e.g maximum likelihood estimation, classification, overfitting, and cross-validation), and how to apply various popular ML techniques (e.g. LASSO, random forests, bayesian additive regression trees, and neural networks). This course will also pay particular attention to inferential problems regarding how best to use ML methods in social science contexts and discuss practical issues (e.g. computational power and parallelisation). Students on this course are required to be familiar with probability and statistics (OLS, hypothesis testing, logistic regression) and to have basic knowledge of the R programming language.’
 
 organization: Inter-university Consortium for Political and Social Research (ICPSR) organization_url: ‘https://www.icpsr.umich.edu/web/pages/sumprog/scholarships/winners-2020.html' title: Advanced Network Analysis, and Data Science and Text Analysis url: ‘https://www.icpsr.umich.edu/web/pages/sumprog/biblio/2020/' certificate_url: ‘https://www.coursera.org’ date_start: ‘2020-07-14’ date_end: ‘2020-08-20’ description: ‘The ICPSR Summer Program provides rigorous, hands-on training in statistical techniques, research methodologies, and data analysis.’
 
@@ -104,12 +118,11 @@ library(fontawesome)
 </center>
 
 
-
 ```{r, include=FALSE, results='asis'}
 library(metathis)
 meta() %>%
   meta_social(
-    title = "YET",
+    title = "Yunus Emre Tapan",
     description = "Personal academic website of Yunus Emre Tapan",
     url = "https://yemretapan.netlify.app/",
     image = "https://github.com/tapanyemre/yet_distill/blob/main/Images/yet.jpg",
